Revision history for Perl extension Cpanel::JSON::XS

TODO: http://stevehanov.ca/blog/index.php?id=104 compression

3.0217_01 2016-10-04 (rurban)
	- Detect INF/NAN: ?/++/-?/--- on HP-UX (#56)

3.0217 2016-06-18 (rurban)
	- Improve test t/20_unknown.t for older JSON::PP (Christopher J. Madsen)

3.0216 2016-06-12 (rurban)
	- Fix wrong test 117 for 5.10.0 (pghmcfc)

3.0215 2016-06-03 (rurban)
	- Fix wrong test 117 (pghmcfc)
        - TODO the fragile mojo boolean interop test.
	- Improve error message with class based method calls,
          when forgetting ->new. #66

3.0214 2016-06-02 (rurban)
	- Fix a off-by-one IV_MIN -> NV overflow in decode_json. #67 (xdg)
        - Avoid encode_sv SEGV with -Dusequadmath #62
          Fix quadmath NV stringification.

3.0213_02 2016-04-13 (rurban)
	- Remove author-only Pod::Usage dependency (karenetheridge).

3.0213_01 2016-04-11 (rurban)
	- Preserve numbers as numbers, enforce an added .0 (dagolden).
          Also note that 42+"bar" will result >=5.10 in numbers not integers,
          => 42.0
        - 5.6 compilation fixes
        - add yaml-tiny formats to cpanel_json_xs

3.0213 2016-03-02 (rurban)
	- silence JSON::PP::Boolean redefine warnings #60

3.0212 2016-02-27 (rurban)
	- merge with JSON-XS-3.02:
	  - docs: add some INTEROP, stricter nonref RFC 7159 and
	          TAGGED VALUE SYNTAX AND STANDARD JSON EN/DECODERS paragraphs
	  - use 7159 nonref detection from JSON-XS: json_nonref()
	  - add some SAVESTACK_POS calls
	  - add -f cbor decode option (via CBOR::XS) to cpanel_json_xs
	- fixed many spelling errors in the new docs
	- fixed errors with threaded perls
	- improved code quality in new merged code and fixed
          new warnings found with gcc-5

	- add -f and -t yaml-xs and yaml-syck options to cpanel_json_xs

3.0211 2016-01-10 (rurban)
       - relax Mojo interop test strictness ('' or 0 for false)
       - t/z_pod.t as author test (Ether)
       - t/z_kwalitee.t accepts now RELEASE_TESTING