@@ -848,16 +848,22 @@ OBJECT-ORIENTED INTERFACE
 
     $json->stringify_infnan ([$infnan_mode = 1])
     $infnan_mode = $json->get_stringify_infnan
-        Get or set how Cpanel::JSON::XS encodes "inf" or "nan" for numeric
-        values.
+        Get or set how Cpanel::JSON::XS encodes "inf", "-inf" or "nan" for
+        numeric values. Also qnan, snan or negative nan on some platforms.
 
         "null": infnan_mode = 0. Similar to most JSON modules in other
-        languages.
+        languages. Always null.
 
-        stringified: infnan_mode = 1. As in Mojo::JSON.
+        stringified: infnan_mode = 1. As in Mojo::JSON. Platform specific
+        strings. Stringified via sprintf(%g), with double quotes.
 
-        inf/nan: infnan_mode = 2. As in JSON::XS, and older releases.
-        Produces invalid JSON.
+        inf/nan: infnan_mode = 2. As in JSON::XS, and older releases. Passes
+        through platform dependent values, invalid JSON. Stringified via
+        sprintf(%g), but without double quotes.
+
+        "inf/-inf/nan": infnan_mode = 3. Platform independent inf/nan/-inf
+        strings. No QNAN/SNAN/negative NAN support, unified to "nan". Much
+        easier to detect, but may conflict with valid strings.
 
     $json_text = $json->encode ($perl_scalar)
         Converts the given Perl data structure (a simple scalar or a
