@@ -2,15 +2,17 @@ use strict;
 use Cpanel::JSON::XS;
 use Test::More;
 use Config;
-skip_all "Yet unhandled inf/nan with $^O" if $^O qe 'dec_osf';
-plan tests => 19;
+plan skip_all => "Yet unhandled inf/nan with $^O" if $^O eq 'dec_osf';
+plan tests => 24;
 
-is encode_json([9**9**9]),         '[null]', "inf -> null";
+# infnan_mode = 0:
+is encode_json([9**9**9]),         '[null]', "inf -> null stringify_infnan(0)";
 is encode_json([-sin(9**9**9)]),   '[null]', "nan -> null";
 is encode_json([-9**9**9]),        '[null]', "-inf -> null";
 is encode_json([sin(9**9**9)]),    '[null]', "-nan -> null";
 is encode_json([9**9**9/9**9**9]), '[null]', "-nan -> null";
 
+# infnan_mode = 1: # platform specific strings
 my $json = Cpanel::JSON::XS->new->stringify_infnan;
 my $have_qnan = ($^O eq 'MSWin32' || $^O eq 'aix') ? 1 : 0;
 # TODO dec_osf
@@ -41,20 +43,29 @@ if ($^O eq 'MSWin32'
 #  $neg_nan = $nan;
 #}
 
-is $json->encode([9**9**9]),         "[\"$inf\"]",  "inf -> \"inf\"";
+is $json->encode([9**9**9]),         "[\"$inf\"]",  "inf -> \"inf\" stringify_infnan(1)";
 is $json->encode([-9**9**9]),        "[\"$neg_inf\"]", "-inf -> \"-inf\"";
 # The concept of negative nan is not portable and varies too much.
-# Windows even emits neg_nan for the first test sometimes.
+# Windows even emits neg_nan for the first test sometimes. HP-UX has all tests reverse.
 like $json->encode([-sin(9**9**9)]),   qr/\[\"(\Q$neg_nan\E|\Q$nan\E)\"\]/,  "nan -> \"nan\"";
 like $json->encode([sin(9**9**9)]),    qr/\[\"(\Q$neg_nan\E|\Q$nan\E)\"\]/, "-nan -> \"-nan\"";
 like $json->encode([9**9**9/9**9**9]), qr/\[\"(\Q$neg_nan\E|\Q$nan\E)\"\]/, "-nan -> \"-nan\"";
 
+# infnan_mode = 2: # inf/nan values, as in JSON::XS and older releases.
 $json = Cpanel::JSON::XS->new->stringify_infnan(2);
-is $json->encode([9**9**9]),         "[$inf]",  "inf";
+is $json->encode([9**9**9]),         "[$inf]",  "inf stringify_infnan(2)";
 is $json->encode([-9**9**9]),        "[$neg_inf]", "-inf";
 like $json->encode([-sin(9**9**9)]),   qr/\[(\Q$neg_nan\E|\Q$nan\E)\]/,  "nan";
 like $json->encode([sin(9**9**9)]),    qr/\[(\Q$neg_nan\E|\Q$nan\E)\]/, "-nan";
 like $json->encode([9**9**9/9**9**9]), qr/\[(\Q$neg_nan\E|\Q$nan\E)\]/, "-nan";
+
+# infnan_mode = 3: # inf/nan values unified to inf/-inf/nan strings. no qnan/snan/negative nan
+$json = Cpanel::JSON::XS->new->stringify_infnan(3);
+is $json->encode([9**9**9]),         '["inf"]',  "inf stringify_infnan(3)";
+is $json->encode([-9**9**9]),        '["-inf"]', "-inf";
+is $json->encode([-sin(9**9**9)]),   '["nan"]',  "nan";
+is $json->encode([9**9**9/9**9**9]), '["nan"]', "nan or -nan";
+is $json->encode([sin(9**9**9)]),    '["nan"]', "nan or -nan";
 
 my $num = 3;
 my $str = "$num";
